feat: working animation for 1.1